Closed
Bug 1144889
Opened 11 years ago
Closed 11 years ago
WebGL 2 unavailable. Requires feature sRGB
Categories
(Core :: Graphics: CanvasWebGL, defect)
Tracking
()
RESOLVED
FIXED
mozilla39
| Tracking | Status | |
|---|---|---|
| firefox39 | --- | fixed |
People
(Reporter: nick, Assigned: jgilbert)
References
()
Details
Attachments
(3 files, 2 obsolete files)
|
5.66 KB,
patch
|
u480271
:
review+
|
Details | Diff | Splinter Review |
|
3.83 KB,
patch
|
u480271
:
review+
|
Details | Diff | Splinter Review |
|
984 bytes,
patch
|
u480271
:
review+
|
Details | Diff | Splinter Review |
When I run the following statement in my dev console with webgl.enable-prototype-webgl2 flipped:
document.createElement('canvas').getContext('experimental-webgl2')
I see:
null
Error: WebGL: Disallowing antialiased backbuffers due to blacklisting.
Error: WebGL: WebGL 2 unavailable. Requires feature sRGB.
Error: WebGL: WebGL creation failed.
This is on OSX 10.8.5 w/ Intel HD 4000 + NVIDIA 650M
| Assignee | ||
Comment 1•11 years ago
|
||
Assignee: nobody → jgilbert
Attachment #8579665 -
Flags: review?(dglastonbury)
| Assignee | ||
Updated•11 years ago
|
Comment on attachment 8579665 [details] [diff] [review]
0001-Fancy-sRGB-GLFeature-detection-should-suppliment-not.patch
Review of attachment 8579665 [details] [diff] [review]:
-----------------------------------------------------------------
As discussed on IRC, I implemented this also: https://github.com/djg/gecko-dev/commit/8e585b2822137c88a00039b57630abbbf4d0dc60
I'd like to see the two patches merged and also the removal of sRGB feature, as you suggested.
::: gfx/gl/GLContext.cpp
@@ +1692,2 @@
> if (nsCocoaFeatures::OSXVersionMajor() == 10 &&
> + nsCocoaFeatures::OSXVersionMinor() == 9 &&
This change undoes a feature I landed. r-
Attachment #8579665 -
Flags: review?(dglastonbury) → review-
| Assignee | ||
Comment 3•11 years ago
|
||
Attachment #8579665 -
Attachment is obsolete: true
Attachment #8580270 -
Flags: review?(dglastonbury)
Comment on attachment 8580270 [details] [diff] [review]
0001-Do-proper-sRGB-detection.patch
Review of attachment 8580270 [details] [diff] [review]:
-----------------------------------------------------------------
r- because this patch reverts fix for Bug 1124996. Revert that and r+
::: gfx/gl/GLContext.cpp
@@ +1693,2 @@
> if (nsCocoaFeatures::OSXVersionMajor() == 10 &&
> + nsCocoaFeatures::OSXVersionMinor() == 9 &&
This still needs to be reverted.
Attachment #8580270 -
Flags: review?(dglastonbury) → review-
| Assignee | ||
Comment 5•11 years ago
|
||
Comment on attachment 8580270 [details] [diff] [review]
0001-Do-proper-sRGB-detection.patch
Review of attachment 8580270 [details] [diff] [review]:
-----------------------------------------------------------------
::: gfx/gl/GLContext.cpp
@@ +1693,2 @@
> if (nsCocoaFeatures::OSXVersionMajor() == 10 &&
> + nsCocoaFeatures::OSXVersionMinor() == 9 &&
This is git misbehaving.
| Assignee | ||
Comment 6•11 years ago
|
||
Attachment #8580270 -
Attachment is obsolete: true
Attachment #8580475 -
Flags: review?(dglastonbury)
Attachment #8580475 -
Flags: review?(dglastonbury) → review+
| Assignee | ||
Comment 8•11 years ago
|
||
Attachment #8582095 -
Flags: review?(dglastonbury)
| Assignee | ||
Comment 9•11 years ago
|
||
Attachment #8582096 -
Flags: review?(dglastonbury)
Attachment #8582095 -
Flags: review?(dglastonbury) → review+
Attachment #8582096 -
Flags: review?(dglastonbury) → review+
| Assignee | ||
Comment 10•11 years ago
|
||
Comment 11•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
status-firefox39:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in
before you can comment on or make changes to this bug.
Description
•