Bug 1144889 - Do proper sRGB detection. - r=kamidphish